--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<a href="https://youtu.be/yVTNge3sXpg">My current favourite song is</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
